# OctoPrint-Mglcd

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
octoprint_mglcd/: __init__.py
octoprint_mglcd/static/supportfiles/nextion_uploader/: nextion.py
